# segment-anything-ncnn

./: CMakeLists.txt  README.md
include/: pipeline.h  segment_anything.h  type.h
models/: decoder.param  encoder-einsum.param  encoder-matmul.param
ncnn/include/ncnn/: platform.h
ncnn/lib/cmake/ncnn/: ncnn.cmake
ncnn/lib/pkgconfig/: ncnn.pc
src/: demo.cpp  main.cpp  pipeline.cpp  segment_anything.cpp
